src/OPSLC/antlr/GLSLParser.cpp

// Generated from GLSLParser.g4 by ANTLR 4.8


#include "GLSLParserVisitor.h"

#include "GLSLParser.h"


using namespace antlrcpp;
using namespace antlr4;

GLSLParser::GLSLParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

GLSLParser::~GLSLParser() {
  delete _interpreter;
}

std::string GLSLParser::getGrammarFileName() const {
  return "GLSLParser.g4";
}

const std::vector<std::string>& GLSLParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& GLSLParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- VariableIdentifierContext ------------------------------------------------------------------

GLSLParser::VariableIdentifierContext::VariableIdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GLSLParser::VariableIdentifierContext::IDENTIFIER() {
  return getToken(GLSLParser::IDENTIFIER, 0);
}


size_t GLSLParser::VariableIdentifierContext::getRuleIndex() const {
  return GLSLParser::RuleVariableIdentifier;
}


antlrcpp::Any GLSLParser::VariableIdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GLSLParserVisitor*>(visitor))
    return parserVisitor->visitVariableIdentifier(this);
  else
    return visitor->visitChildren(this);
}

GLSLParser::VariableIdentifierContext* GLSLParser::variableIdentifier() {
  VariableIdentifierContext *_localctx = _tracker.createInstance<VariableIdentifierContext>(_ctx, getState());
  enterRule(_localctx, 0, GLSLParser::RuleVariableIdentifier);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(156);
    match(GLSLParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrimaryExpressionContext ------------------------------------------------------------------

GLSLParser::PrimaryExpressionContext::PrimaryExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GLSLParser::VariableIdentifierContext* GLSLParser::PrimaryExpressionContext::variableIdentifier() {
  return getRuleContext<GLSLParser::VariableIdentifierContext>(0);
}

tree::TerminalNode* GLSLParser::PrimaryExpressionContext::INTCONSTANT() {
  return getToken(GLSLParser::INTCONSTANT, 0);
}

tree::TerminalNode* GLSLParser::PrimaryExpressionContext::UINTCONSTANT() {
  return getToken(GLSLParser::UINTCONSTANT, 0);
}

tree::TerminalNode* GLSLParser::PrimaryExpressionContext::FLOATCONSTANT() {
  return getToken(GLSLParser::FLOATCONSTANT, 0);
}

tree::TerminalNode* GLSLParser::PrimaryExpressionContext::BOOLCONSTANT() {
  return getToken(GLSLParser::BOOLCONSTANT, 0);
}

tree::TerminalNode* GLSLParser::PrimaryExpressionContext::DOUBLECONSTANT() {
  return getToken(GLSLParser::DOUBLECONSTANT, 0);
}

tree::TerminalNode* GLSLParser::PrimaryExpressionContext::LEFT_PAREN() {
  return getToken(GLSLParser::LEFT_PAREN, 0);
}

GLSLParser::ExpressionContext* GLSLParser::PrimaryExpressionContext::expression() {
  return getRuleContext<GLSLParser::ExpressionContext>(0);
}

tree::TerminalNode* GLSLParser::PrimaryExpressionContext::RIGHT_PAREN() {
  return getToken(GLSLParser::RIGHT_PAREN, 0);
}


size_t GLSLParser::PrimaryExpressionContext::getRuleIndex() const {
  return GLSLParser::RulePrimaryExpression;
}


antlrcpp::Any GLSLParser::PrimaryExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GLSLParserVisitor*>(visitor))
    return parserVisitor->visitPrimaryExpression(this);
  else
    return visitor->visitChildren(this);
}

GLSLParser::PrimaryExpressionContext* GLSLParser::primaryExpression() {
  PrimaryExpressionContext *_localctx = _tracker.createInstance<PrimaryExpressionContext>(_ctx, getState());
  enterRule(_localctx, 2, GLSLParser::RulePrimaryExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(168);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case GLSLParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 1);
        setState(158);
        variableIdentifier();
        break;
      }

      case GLSLParser::INTCONSTANT: {
        enterOuterAlt(_localctx, 2);
        setState(159);
        match(GLSLParser::INTCONSTANT);
        break;
      }

      case GLSLParser::UINTCONSTANT: {
        enterOuterAlt(_localctx, 3);
        setState(160);
        match(GLSLParser::UINTCONSTANT);
        break;
      }

      case GLSLParser::FLOATCONSTANT: {
        enterOuterAlt(_localctx, 4);
        setState(161);
        match(GLSLParser::FLOATCONSTANT);
        break;
      }

      case GLSLParser::BOOLCONSTANT: {
        enterOuterAlt(_localctx, 5);
        setState(162);
        match(GLSLParser::BOOLCONSTANT);
        break;
      }

      case GLSLParser::DOUBLECONSTANT: {
        enterOuterAlt(_localctx, 6);
        setState(163);
        match(GLSLParser::DOUBLECONSTANT);
        break;
      }

      case GLSLParser::LEFT_PAREN: {
        enterOuterAlt(_localctx, 7);
        setState(164);
        match(GLSLParser::LEFT_PAREN);
        setState(165);
        expression(0);
        setState(166);
        match(GLSLParser::RIGHT_PAREN);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PostfixExpressionContext ------------------------------------------------------------------

GLSLParser::PostfixExpressionContext::PostfixExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GLSLParser::PrimaryExpressionContext* GLSLParser::PostfixExpressionContext::primaryExpression() {
  return getRuleContext<GLSLParser::PrimaryExpressionContext>(0);
}

GLSLParser::TypeSpecifierContext* GLSLParser::PostfixExpressionContext::typeSpecifier() {
  return getRuleContext<GLSLParser::TypeSpecifierContext>(0);
}

tree::TerminalNode* GLSLParser::PostfixExpressionContext::LEFT_PAREN() {
  return getToken(GLSLParser::LEFT_PAREN, 0);
}

GLSLParser::AssignmentExpressionContext* GLSLParser::PostfixExpressionContext::assignmentExpression() {
  return getRuleContext<GLSLParser::AssignmentExpressionContext>(0);
}

GLSLParser::FunctionCallHeaderWithParameters_Context* GLSLParser::PostfixExpressionContext::functionCallHeaderWithParameters_() {
  return getRuleContext<GLSLParser::FunctionCallHeaderWithParameters_Context>(0);
}

tree::TerminalNode* GLSLParser::PostfixExpressionContext::RIGHT_PAREN() {
  return getToken(GLSLParser::RIGHT_PAREN, 0);
}

tree::TerminalNode* GLSLParser::PostfixExpressionContext::VOID_() {
  return getToken(GLSLParser::VOID_, 0);
}

GLSLParser::PostfixExpressionContext* GLSLParser::PostfixExpressionContext::postfixExpression() {
  return getRuleContext<GLSLParser::PostfixExpressionContext>(0);
}

tree::TerminalNode* GLSLParser::PostfixExpressionContext::LEFT_BRACKET() {
  return getToken(GLSLParser::LEFT_BRACKET, 0);
}

GLSLParser::IntegerExpressionContext* GLSLParser::PostfixExpressionContext::integerExpression() {
  return getRuleContext<GLSLParser::IntegerExpressionContext>(0);
}

tree::TerminalNode* GLSLParser::PostfixExpressionContext::RIGHT_BRACKET() {
  return getToken(GLSLParser::RIGHT_BRACKET, 0);
}

tree::TerminalNode* GLSLParser::PostfixExpressionContext::DOT() {
  return getToken(GLSLParser::DOT, 0);
}

tree::TerminalNode* GLSLParser::PostfixExpressionContext::IDENTIFIER() {
  return getToken(GLSLParser::IDENTIFIER, 0);
}

tree::TerminalNode* GLSLParser::PostfixExpressionContext::INC_OP() {
  return getToken(GLSLParser::INC_OP, 0);
}

tree::TerminalNode* GLSLParser::PostfixExpressionContext::DEC_OP() {
  return getToken(GLSLParser::DEC_OP, 0);
}


size_t GLSLParser::PostfixExpressionContext::getRuleIndex() const {
  return GLSLParser::RulePostfixExpression;
}


antlrcpp::Any GLSLParser::PostfixExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GLSLParserVisitor*>(visitor))
    return parserVisitor->visitPostfixExpression(this);
  else
    return visitor->visitChildren(this);
}


GLSLParser::PostfixExpressionContext* GLSLParser::postfixExpression() {
   return postfixExpression(0);
}

GLSLParser::PostfixExpressionContext* GLSLParser::postfixExpression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  GLSLParser::PostfixExpressionContext *_localctx = _tracker.createInstance<PostfixExpressionContext>(_ctx, parentState);
  GLSLParser::PostfixExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 4;
  enterRecursionRule(_localctx, 4, GLSLParser::RulePostfixExpression, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(185);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      setState(171);
      primaryExpression();
      break;
    }

    case 2: {
      setState(172);
      typeSpecifier();
      setState(173);
      match(GLSLParser::LEFT_PAREN);
      setState(174);
      assignmentExpression();
      setState(175);
      functionCallHeaderWithParameters_();
      setState(176);
      match(GLSLParser::RIGHT_PAREN);
      break;
    }

    case 3: {
      setState(178);
      typeSpecifier();
      setState(179);
      match(GLSLParser::LEFT_PAREN);
      setState(181);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == GLSLParser::VOID_) {
        setState(180);
        match(GLSLParser::VOID_);
      }
      setState(183);
      match(GLSLParser::RIGHT_PAREN);
      break;
    }

    }
    _ctx->stop = _input->LT(-1);
    setState(213);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(211);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<PostfixExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RulePostfixExpression);
          setState(187);

          if (!(precpred(_ctx, 8))) throw FailedPredicateException(this, "precpred(_ctx, 8)");
          setState(188);
          match(GLSLParser::LEFT_BRACKET);
          setState(189);
          integerExpression();
          setState(190);
          match(GLSLParser::RIGHT_BRACKET);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<PostfixExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RulePostfixExpression);
          setState(192);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(193);
          match(GLSLParser::DOT);
          setState(194);
          match(GLSLParser::IDENTIFIER);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<PostfixExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RulePostfixExpression);
          setState(195);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(196);
          match(GLSLParser::INC_OP);
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<PostfixExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RulePostfixExpression);
          setState(197);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(198);
          match(GLSLParser::DEC_OP);
          break;
        }

        case 5: {
          _localctx = _tracker.createInstance<PostfixExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RulePostfixExpression);
          setState(199);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(200);
          match(GLSLParser::LEFT_PAREN);
          setState(201);
          assignmentExpression();
          setState(202);
          functionCallHeaderWithParameters_();
          setState(203);
          match(GLSLParser::RIGHT_PAREN);
          break;
        }

        case 6: {
          _localctx = _tracker.createInstance<PostfixExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RulePostfixExpression);
          setState(205);

          if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
          setState(206);
          match(GLSLParser::LEFT_PAREN);
          setState(208);
          _errHandler->sync(this);

          _la = _input->LA(1);
          if (_la == GLSLParser::VOID_) {
            setState(207);
            match(GLSLParser::VOID_);
          }
          setState(210);
          match(GLSLParser::RIGHT_PAREN);
          break;
        }

        } 
      }
      setState(215);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- IntegerExpressionContext ------------------------------------------------------------------

GLSLParser::IntegerExpressionContext::IntegerExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GLSLParser::ExpressionContext* GLSLParser::IntegerExpressionContext::expression() {
  return getRuleContext<GLSLParser::ExpressionContext>(0);
}


size_t GLSLParser::IntegerExpressionContext::getRuleIndex() const {
  return GLSLParser::RuleIntegerExpression;
}


antlrcpp::Any GLSLParser::IntegerExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GLSLParserVisitor*>(visitor))
    return parserVisitor->visitIntegerExpression(this);
  else
    return visitor->visitChildren(this);
}

GLSLParser::IntegerExpressionContext* GLSLParser::integerExpression() {
  IntegerExpressionContext *_localctx = _tracker.createInstance<IntegerExpressionContext>(_ctx, getState());
  enterRule(_localctx, 6, GLSLParser::RuleIntegerExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(216);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionCallHeaderWithParameters_Context ------------------------------------------------------------------

GLSLParser::FunctionCallHeaderWithParameters_Context::FunctionCallHeaderWithParameters_Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GLSLParser::FunctionCallHeaderWithParameters_Context::COMMA() {
  return getToken(GLSLParser::COMMA, 0);
}

GLSLParser::AssignmentExpressionContext* GLSLParser::FunctionCallHeaderWithParameters_Context::assignmentExpression() {
  return getRuleContext<GLSLParser::AssignmentExpressionContext>(0);
}

GLSLParser::FunctionCallHeaderWithParameters_Context* GLSLParser::FunctionCallHeaderWithParameters_Context::functionCallHeaderWithParameters_() {
  return getRuleContext<GLSLParser::FunctionCallHeaderWithParameters_Context>(0);
}


size_t GLSLParser::FunctionCallHeaderWithParameters_Context::getRuleIndex() const {
  return GLSLParser::RuleFunctionCallHeaderWithParameters_;
}


antlrcpp::Any GLSLParser::FunctionCallHeaderWithParameters_Context::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GLSLParserVisitor*>(visitor))
    return parserVisitor->visitFunctionCallHeaderWithParameters_(this);
  else
    return visitor->visitChildren(this);
}

GLSLParser::FunctionCallHeaderWithParameters_Context* GLSLParser::functionCallHeaderWithParameters_() {
  FunctionCallHeaderWithParameters_Context *_localctx = _tracker.createInstance<FunctionCallHeaderWithParameters_Context>(_ctx, getState());
  enterRule(_localctx, 8, GLSLParser::RuleFunctionCallHeaderWithParameters_);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(223);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case GLSLParser::COMMA: {
        enterOuterAlt(_localctx, 1);
        setState(218);
        match(GLSLParser::COMMA);
        setState(219);
        assignmentExpression();
        setState(220);
        functionCallHeaderWithParameters_();
        break;
      }

      case GLSLParser::RIGHT_PAREN: {
        enterOuterAlt(_localctx, 2);

        break;
      }
